--- a/index.html
+++ b/index.html
@@ -512,58 +512,65 @@
         };
 
         // **UPDATED**: AI prompt template now reflects the new, cleaner data structure.
-        const aiPromptTemplate = `Generate a DnD character according to the JSON template below. Please only fill in the user-configurable fields. The application will automatically calculate the final modifiers. (insert your character details here, e.g., "Generate a level 3 Dragonborn Paladin")
+        const aiPromptTemplate = `Generate a DnD character according to the JSON template below. Don't change the name of any key. The application will automatically calculate the final modifiers.
 {
-  "name": "Kriv Oathkeeper", // Generate a fitting character name.
-  "level": 3, // Set the character's level.
-  "race": "Dragonborn (Gold)", // Generate a character race.
-  "class": "Paladin", // Generate a character class.
-  "background": "Noble", // Generate a background that fits the class/race.
-  "alignment": "Lawful Good", // Generate a suitable alignment.
-  "maxHp": 28, // Calculate max HP (Class Hit Die + CON modifier, plus additional HP from levels).
-  "armorClass": 18, // Calculate Armor Class based on typical starting gear (e.g., Chain Mail + Shield).
-  "speed": 30, // Set movement speed based on race.
-  "abilities": { // Generate base ability scores (e.g., using Standard Array or Point Buy) and apply racial bonuses.
-    "strength": 17,
-    "dexterity": 10,
-    "constitution": 14,
-    "intelligence": 8,
-    "wisdom": 12,
-    "charisma": 15
+  "name": "Kriv Oathkeeper", // Generate a fitting and unique character name.
+  "level": 3, // Set the character's level as an integer.
+  "race": "Dragonborn (Gold)", // Choose a race from the D&D 5e Player's Handbook.
+  "class": "Paladin", // Choose a class from the D&D 5e Player's Handbook.
+  "background": "Noble", // Choose a background that aligns with the character's story.
+  "alignment": "Lawful Good", // Set the character's moral and ethical alignment.
+  "maxHp": 28, // Calculate max HP based on class hit die and Constitution modifier.
+  "armorClass": 18, // Calculate AC based on typical starting gear (e.g., Chain Mail + Shield).
+  "speed": 30, // Set the character's movement speed in feet.
+  "abilities": { // Generate a set of ability scores (e.g., using Standard Array: 15, 14, 13, 12, 10, 8) and apply racial bonuses.
+    "strength": 17, // Strength score.
+    "dexterity": 10, // Dexterity score.
+    "constitution": 14, // Constitution score.
+    "intelligence": 8, // Intelligence score.
+    "wisdom": 12, // Wisdom score.
+    "charisma": 15 // Charisma score.
   },
   "proficiencies": {
-    "savingThrows": [ // List the two saving throw proficiencies from the generated class.
+    "savingThrows": [ // List the two saving throw proficiencies granted by the chosen class.
       "wisdom",
       "charisma"
     ],
-    "skills": [ // List all skill proficiencies from class and background.
+    "skills": [ // List all skill proficiencies from the chosen class and background.
       "Athletics",
       "Insight",
       "Medicine",
       "Persuasion"
     ]
   },
-  "spellsAndSlots": { // Populate with spells and features based on class and level. List features under the "feature" key.
-    "1": {
-        "slots": 3,
-        "spells": [
-            { "name": "Bless", "description": "Buff allies' attack rolls and saving throws." },
+  "spellsAndSlots": { // Populate with spells and features based on class and level.
+    "0": { // This is for cantrips (level 0 spells).
+      "slots": 0, // Cantrips do not use spell slots. Always set to 0.
+      "spells": [ // List the cantrips the character knows. Include name and a brief description.
+        { "name": "Sacred Flame", "description": "A holy fire that engulfs a target." },
+        { "name": "Light", "description": "Illuminates an object to provide light." }
+      ]
+    },
+    "1": { // This is for 1st-level spells. Add more levels as needed (e.g., "2", "3", etc.).
+        "slots": 3, // Set the number of spell slots available for this level.
+        "spells": [ // List the spells the character has access to.
+            { "name": "Bless", "description": "Buffs allies' attack rolls and saving throws." },
             { "name": "Cure Wounds", "description": "Heal a creature you touch." }
         ]
     },
-    "feature": {
-        "spells": [
+    "feature": { // This key is for class features that function like spells, or other non-spell abilities.
+        "spells": [ // List the features.
             { "name": "Divine Smite", "description": "Expend a spell slot to deal extra radiant damage on a melee weapon hit." },
             { "name": "Lay on Hands", "description": "Heal creatures with a pool of healing power." }
         ]
     }
   },
-  "coins": { // Set starting coins based on the generated background.
-    "pp": 0,
-    "gp": 25,
-    "ep": 0,
-    "sp": 0,
-    "cp": 0
+  "coins": { // Set the starting currency based on the chosen background.
+    "pp": 0, // Platinum Pieces.
+    "gp": 25, // Gold Pieces.
+    "ep": 0, // Electrum Pieces.
+    "sp": 0, // Silver Pieces.
+    "cp": 0 // Copper Pieces.
   },
   "notes": "" // This field is for user notes. Leave it empty.
 }`;
