--- a/how-to.html
+++ b/how-to.html
@@ -102,7 +102,7 @@
             <p class="text-xl text-amber-400 mt-2">Your Adventure Companion</p>
         </header>
         
-        <nav class="navbar sticky top-0">
+        <nav class="navbar">
             <ul class="list-none p-0 m-0">
                 <li><a href="#getting-started">Getting Started</a></li>
                 <li><a href="#main-dashboard">Dashboard</a></li>
